# django-check-locking-migrations

./: .editorconfig  .pre-commit-hooks.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
migration_lock_checker/: check_migration_locks.py
tests/: __init__.py  run_tests.py  test_config.json  test_migration_lock_checker.py
tests/sample_migrations/: 0001_initial.py  0002_critical_migration.py  0003_runpython_migration.py  0004_complex_sql_migration.py  0005_rename_operations.py  0006_index_constraints_migration.py  0007_foreign_key_migration.py  0008_data_only_migration.py  0009_ignored_migration.py  __init__.py
